--- a/milestone/milestone.tex
+++ b/milestone/milestone.tex
@@ -2,6 +2,7 @@
 \usepackage{nips13submit_e,times}
 \usepackage{hyperref}
 \usepackage{url}
+\usepackage{graphicx}
 %\documentstyle[nips13submit_09,times,art10]{article} % For LaTeX 2.09
 
 
@@ -46,11 +47,7 @@ Stanford University \\
 \maketitle
 
 \begin{abstract}
-The abstract paragraph should be indented 1/2~inch (3~picas) on both left and
-right-hand margins. Use 10~point type, with a vertical spacing of 11~points.
-The word \textbf{Abstract} must be centered, bold, and in point size 12. Two
-line spaces precede the abstract. The abstract must be limited to one
-paragraph.
+Previous work in aspect-level sentiment analysis---identifying the sentiment associated with products and their individual attributes, like battery life---have mostly been formulated as supervised learning problems, requiring known labels of both the relevant aspects and their sentiment. Here we propose a hybrid method where we first generate aspects from natural language text via unsupervised clustering of word vector representations, and secondly extract aspect-level sentiment. We further propose a deep learning architecture for aggregating and summarizing these aspect-level sentiment within and across reviews.
 \end{abstract}
 
 \section{Introduction}
@@ -73,70 +70,112 @@ The second problem involves aggregation of reviews, or constructing a \textit{me
 \section{Problem Statement}
 Describe your problem precisely specifying the dataset to be used, expected results and evaluation
 
-Amazon Reviews [1]
+
+
+Amazon Reviews of Electronics [11]
 
 
 
 \section{Technical Approach and Models} 
+%Describe the methods you intend to apply to solve the given problem
 
-\begin{enumerate}
-\item Run word2vec to get an embedded representation
-\item Start with a small (hand-generated) seed list of attributes (``Entities").
-	\begin{itemize}
-	\item Build Construction
-	\item Price
-	\item Battery Life
-	\item ...
-	\end{itemize}
-\item Use the word2vec representation to find similar words/phrases. (This process might also generate adjectives or common phrases used to describe this particular attribute.)
-	\begin{itemize}
-	\item Build Construction, Build Quality
-	\item Price, Cost, (Expensive, Cheap, Affordable)
-	\item Battery Life, (Long-Lasting), Charging
-	\item ...
-	\end{itemize}
-	{\it Desmond and Shane's discussion: it might be counter-intuitive but beneficial to treat Expensive as an attribute (for Price). The NER model will be doing something ``wrong" in labeling an adjective as an entity, but you'll be able to capture the price information when someone says ``expensive".}
-\item Use this list in an NER model to teach it to learn to recognize attributes as a new class of entities.
-\item Next, given that attributes are labelled in the text, we can run sentiment analysis.
-        \begin{itemize}
-	\item Most naively, we can just label all the unigrams. Then, we can just take every sentence, find all the attributes listed in that sentence, and then associate the sentiment of the entire sentence to those attributes.
-	\item More sophisticated models would involve looking at local context and compositionality. Thus, we could run a window (instead of the whole sentence), calculate the sentiment associated with the words in the window (either at the unigram level or at the subtree level, a la Socher et al), and associate that sentiment with the attribute found within the window.
-	\end{itemize}
-\item Then we would have to sum up the 
-\item The output would be a (long and sparse) attribute vector where the $i$-th element is the sentiment associated with the $i$-th attribute:
-        \begin{itemize}
-	\item E.g. attribute$_1$ = build quality, attribute$_2$ = cost
-	\item If product has good build quality but is very expensive, then \\
-	outputAttributeVector = [4, 0, $\ldots$] (scale from 0-4)
-	\end{itemize}
-\item Visualization of output vector.
-\end{enumerate}
+\begin{figure}[h]
+\begin{center}
+\includegraphics[width=1\columnwidth]{workflow.png}
+\end{center}
+\caption{Proposed Workflow. Boxed items are processes, while non-boxed items are outputs. The left half of the diagram details unsupervised aspect identification, while the right half of the diagram involves aspect-specific sentiment extraction, summarization and visualization. Except for the Sentiment Labeling and Visualization processes, every other process involves deep learning.}
+\end{figure}
 
-When one is planning a purchase, one usually has to spend time sifting through multiple reviews across many different websites, distilling the information to get (1) ratings for individual attributes (“battery life”), and (2) an overall rating / summary of the information, presented in a “meta-review”. 
-Four separate sub-problems:
-1) Doing POS-tagging and named entity recognition for various product attributes (e.g. battery life, weight, portability, etc) (we’ll probably use off-the-shelf (Stanford NLP) tools for this problem)
-2) Train word2vec representations of said attributes and clustering them (e.g. “build quality” and “construction” can refer to the same attribute)
-3) Extract sentiment based on product attributes
-4) Aggregate this information across multiple reviews (creating a “meta-review”)
-A potential application allows for quick comparisons of various products based on user-generated reviews. Say you are purchasing an Android tablet and are looking at the Samsung Galaxy Tab 4, Nexus 9, Nvidia Shield and other similar products, our system would allow users to identify key attributes of each product (e.g. screen resolution, build quality, battery life, etc) and their associated sentiment, i.e. how positively or negatively do people feel about each product attribute.
-Given the constraints of a class project, we will be limiting our dataset to reviews of electronic consumer products.
+Our proposed workflow can be divided into three main parts: {\bf Aspect Identification}, {\bf Aspect-Specific Sentiment Extraction}, and {\bf Sentiment Aggregation}.
+
+\subsection{Aspect Identification}
+
+The first part involves an unsupervised approach to generating aspects. For example, for a given electronic item such as a mobile phone, relevant aspects could be the battery life, screen size, weight, cost, and more. Not all of these aspects are relevant across all electronic items: for a computer, weight might be less of an issue, while screen size might be moot for a screen-less music player.
+First, we would run word2vec to obtain a word vector representation of the data. Then, we would perform k-means clustering (or some other clustering algorithm) on the word2vec representations. This would generate clusters of similar words, such as: \{build construction, build quality, durability, etc\}. We can then define the weighted centroid of these clusters as {\bf Aspects}, and the other words in the cluster as relevant synonyms. This allows us to then label all the aspect-words in the dataset.
 
 
-POS and NER: Using off-the-shelf tools
-Clustering entities: cluster learned word2vec representations (e.g. K-NN or distribution-based clustering methods)
-Extract entity-level sentiment: modifying and extending Socher et al (2013)’s model via calculating the sentiment in a window/neighborhood around the named entity, up to the whole sentence.
-Aggregation of sentiment (across multiple sentences, and across multiple reviews): this is perhaps where deep-learning might be extremely useful, but as yet we do not know enough about various deep learning architectures to do this optimally. There are several papers that we identified that might give us some insight (although they don’t use deep learning)
+%{\it Desmond and Shane's discussion: it might be counter-intuitive but beneficial to treat Expensive as an attribute (for Price). The NER model will be doing something ``wrong" in labeling an adjective as an entity, but you'll be able to capture the price information when someone says ``expensive".}
 
 
-Describe the methods you intend to apply to solve the given problem
+\subsection{Aspect-Specific Sentiment Extraction}
+
+An additional pre-processing step would be to label all unigrams with a trained sentiment analysis model. Once this is done, and with the aspect-labels from the previous part, we now have a dataset labeled with aspect and (unigram-) sentiment.
+
+Next, we build off and improve on the model in [7] to use a RNTN or improved architecture to extract (aspect, aspect-specific sentiment) tuples from the data.
+
+
+\subsection{Aspect-Specific Sentiment Aggregation}
+
+The final part of our project involves sentiment aggregation. This involves aggregating aspect-specific sentiment across sentences within a review, and at a further step, aggregating across reviews. We are still currently reading relevant literature (e.g. [8-10]) to come up with ideas on how to optimally construct this. A non-deep learning approach might be to hand-specify features (review length; timing -- more recent reviews might be more important; etc). A proposal would be to have a deep learning network (such as a recursive neural network with individual reviews as tokens) to try to come up with an optimal way of aggregating this information.
+
+
+An application-related goal would be to have visualization of our output, in terms of a word cloud of important aspects (e.g., sized by word frequency and colored by sentiment), or a ``bar chart" that shows the relevant aspects and their associated sentiment.
+
+
+%
+%\begin{enumerate}
+%\item Run word2vec to get an embedded representation
+%%\item Start with a small (hand-generated) seed list of attributes (``Entities").
+%%	\begin{itemize}
+%%	\item Build Construction
+%%	\item Price
+%%	\item Battery Life
+%%	\item ...
+%%	\end{itemize}
+%\item k means clustering on the word2vec:
+%%\item Use the word2vec representation to find similar words/phrases. 
+%(This process might also generate adjectives or common phrases used to describe attributes.)
+%	\begin{itemize}
+%	\item Build Construction, Build Quality
+%	\item Price, Cost, (Expensive, Cheap, Affordable)
+%	\item Battery Life, (Long-Lasting), Charging
+%	\item ...
+%	\end{itemize}
+%	{\it Desmond and Shane's discussion: it might be counter-intuitive but beneficial to treat Expensive as an attribute (for Price). The NER model will be doing something ``wrong" in labeling an adjective as an entity, but you'll be able to capture the price information when someone says ``expensive".}
+%\item Use this list in an NER model to teach it to learn to recognize attributes as a new class of entities.
+%\item Next, given that attributes are labelled in the text, we can run sentiment analysis.
+%        \begin{itemize}
+%	\item Most naively, we can just label all the unigrams. Then, we can just take every sentence, find all the attributes listed in that sentence, and then associate the sentiment of the entire sentence to those attributes.
+%	\item More sophisticated models would involve looking at local context and compositionality. Thus, we could run a window (instead of the whole sentence), calculate the sentiment associated with the words in the window (either at the unigram level or at the subtree level, a la Socher et al), and associate that sentiment with the attribute found within the window.
+%	\end{itemize}
+%\item Then we would have to aggregate sentiment within a review / across reviews.
+%\item The output would be a (long and sparse) attribute vector where the $i$-th element is the sentiment associated with the $i$-th attribute:
+%        \begin{itemize}
+%	\item E.g. attribute$_1$ = build quality, attribute$_2$ = cost
+%	\item If product has good build quality but is very expensive, then \\
+%	outputAttributeVector = [4, 0, $\ldots$] (scale from 0-4)
+%	\end{itemize}
+%\item Visualization of output vector.
+%\end{enumerate}
+
+
+
+
+%When one is planning a purchase, one usually has to spend time sifting through multiple reviews across many different websites, distilling the information to get (1) ratings for individual attributes (“battery life”), and (2) an overall rating / summary of the information, presented in a “meta-review”. 
+%Four separate sub-problems:
+%1) Doing POS-tagging and named entity recognition for various product attributes (e.g. battery life, weight, portability, etc) (we’ll probably use off-the-shelf (Stanford NLP) tools for this problem)
+%2) Train word2vec representations of said attributes and clustering them (e.g. “build quality” and “construction” can refer to the same attribute)
+%3) Extract sentiment based on product attributes
+%4) Aggregate this information across multiple reviews (creating a “meta-review”)
+%A potential application allows for quick comparisons of various products based on user-generated reviews. Say you are purchasing an Android tablet and are looking at the Samsung Galaxy Tab 4, Nexus 9, Nvidia Shield and other similar products, our system would allow users to identify key attributes of each product (e.g. screen resolution, build quality, battery life, etc) and their associated sentiment, i.e. how positively or negatively do people feel about each product attribute.
+%Given the constraints of a class project, we will be limiting our dataset to reviews of electronic consumer products.
+
+
+%POS and NER: Using off-the-shelf tools
+%Clustering entities: cluster learned word2vec representations (e.g. K-NN or distribution-based clustering methods)
+%Extract entity-level sentiment: modifying and extending Socher et al (2013)’s model via calculating the sentiment in a window/neighborhood around the named entity, up to the whole sentence.
+%Aggregation of sentiment (across multiple sentences, and across multiple reviews): this is perhaps where deep-learning might be extremely useful, but as yet we do not know enough about various deep learning architectures to do this optimally. There are several papers that we identified that might give us some insight (although they don’t use deep learning)
+
+
+
 
 \section{Intermediate/Preliminary Experiments \& Results}
 
 State and evaluate your results up to the milestone
 
 
-We can evaluate the attribute sentiments against the formal ratings provided by CNET or consumer reports. An aggregation of sentiment for individual reviews can also be compared against a user’s overall rating of the product.
-We can evaluate the attribute clustering using standard cluster metrics. A projection to a 2-D space for visualization would also be valuable.
+%We can evaluate the attribute sentiments against the formal ratings provided by CNET or consumer reports. An aggregation of sentiment for individual reviews can also be compared against a user’s overall rating of the product.
+%We can evaluate the attribute clustering using standard cluster metrics. A projection to a 2-D space for visualization would also be valuable.
 
 
 %\begin{figure}[h]
@@ -164,7 +203,7 @@ We can evaluate the attribute clustering using standard cluster metrics. A proje
 
 \subsubsection*{Acknowledgments}
 
-
+We would like to acknowledge funding for computing resources provided by the Deep Social Learning Lab at Stanford.
 
 \subsubsection*{References} % chronological. any citation style is acceptable, as long as it's consistent. Use APA
 
